docs/3.0rc/manage/cloud/rate-limits.mdx
---
title: Rate limits and metadata retention
description: Prefect Cloud API rate limits.
---

Prefect Cloud has controls in place to ensure stability.

## API Rate Limits

<Note>
**Prefect Cloud rate limits are subject to change**

**API rate limits are subject to change.**
Contact Prefect support at [help@prefect.io](mailto:help@prefect.io) with questions about rate limits.
</Note>

Prefect Cloud's API rate limits restrict the number of requests that a single client can make to certain endpoints in a given time period. 
The `flow_runs`, `task_runs`, and `flows` endpoints and their subroutes are limited to:

- 400 requests per minute for Free accounts
- 2,000 requests per minute for Pro accounts

These endpoints return a `429` response with an appropriate `Retry-After` header if this limit is triggered.

The `logs` endpoint is limited to:

- 700 logs per minute for Free accounts
- 10,000 logs per minute for Pro accounts

The endpoint returns a `429` response if this limit is triggered.

## Metadata retention period

Flow run, task run, and artifact metadata is retained according to your Prefect Cloud account's retention period.
The retention period applies to all workspaces that belong to the account.

The retention period is the number of days that metadata is available after it is created. 
For flow and task runs, it is calculated from the time the run reaches a 
[terminal state](/3.0rc/develop/observe-workflows/manage-states/#state-types). 
Nested flow runs are retained independently from their parent flow runs. They are removed based on 
the time each nested flow run reaches a terminal state.

If you have needs that require a custom retention period, [contact Prefect's sales team](https://www.prefect.io/pricing).
