docs/v3/manage/cloud/rate-limits.mdx
---
title: Rate limits and data retention
description: Prefect Cloud API rate limits.
---

Prefect Cloud has controls in place to ensure stability.

## API Rate Limits

<Note>
**Prefect Cloud rate limits are subject to change**

**API rate limits are subject to change.**
To view your account's rate limit usage in Prefect Cloud, go to **Account Settings** > **Rate Limits**. Contact Prefect support at [help@prefect.io](mailto:help@prefect.io) with questions about rate limits.
</Note>

### Orchestration API rate limits
Prefect Cloud's API rate limits restrict the number of requests that an account can make to certain endpoints in a given time period. 
API calls to any orchestration endpoint groups, such as  `flow_runs`, `task_runs`, and `flows`, are limited to:

- 400 requests per minute for Free accounts
- 2,000 requests per minute for Pro accounts

### Observability API rate limits
The number of logs and events that can be written per minute is limited to:

- 700 per minute for Free accounts
- 10,000 per minute for Pro accounts

API calls to read logs and events are limited to 100 requests per minute.

### Rate limit behavior
When rate limits are reached, endpoints return a `429` response with an appropriate `Retry-After` header. See [ClientSettings](/v3/develop/settings-ref#clientsettings) for more information on how retries are handled client-side and how to modify the default behavior.
In the special case where rate limits are reached when calling `/set_state` on a flow or task run, the resulting orchestration response will instruct the engine to wait and retry the request.

## Metadata retention period

Flow run, task run, and artifact metadata is retained according to your Prefect Cloud account's retention period.
The retention period applies to all workspaces that belong to the account.

The retention period is the number of days that metadata is available after it is created. 
For flow and task runs, it is calculated from the time the run reaches a 
[terminal state](/v3/develop/manage-states/#state-types). 
Subflow runs are retained independently from their parent flow runs. They are removed based on 
the time each subflow run reaches a terminal state.

If you have needs that require a custom retention period, [contact Prefect's sales team](https://www.prefect.io/pricing).
